# Cloudy-An-Voice-AI-assistant-for-AWS

./: .gitignore  App.tsx  LIVEKIT_INTEGRATION.md  PROJECT_STRUCTURE.md  README.md  index.html  package-lock.json  package.json  setup-livekit.bat  setup-livekit.sh  types.ts  vite-env.d.ts
.cursor/rules/: important.mdc
backend/: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/.cursor/rules/: context.mdc
backend/config/: env.development  env.production
backend/demo/: README.md  run_demo.bat  run_demo.py  simple_chat_demo.py  start_backend.py  voice_agent_chat.py
backend/src/: __init__.py
backend/src/realtime_assistant_service/: __init__.py  main.py
backend/src/realtime_assistant_service/api/: __init__.py  livekit_routes.py  rest_routes.py
backend/src/realtime_assistant_service/connectors/: __init__.py  gemini_live.py  livekit_connector.py
backend/src/realtime_assistant_service/core/: __init__.py  config.py  integrated_service.py  logging_config.py
backend/src/realtime_assistant_service/models/: __init__.py  schemas.py
backend/tests/: test_basic.py
components/: BillingPage.tsx  ChatInterface.tsx  Header.tsx  LandingPage.tsx  LoginPage.tsx  Message.tsx  SettingsPage.tsx  Sidebar.tsx  VoiceAgentPage.tsx  icons.tsx
config/: livekit.ts
server/: README.md  package-lock.json  package.json  server.js  setup.js  test-connection.js
services/: apiService.ts  geminiService.ts  livekitService.ts  webrtcService.ts
